create-react-app

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>test page for sonification library</title>
-    </head>
-    <body>
-        this will be populated with different controls as more features get added to the library.
-        <script type="module" src="../dist/sonification.module.js">
-        </script>
-    </body>
-</html> 
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
